--- a/src/app/courses/course-info.component.html
+++ b/src/app/courses/course-info.component.html
@@ -2,7 +2,7 @@
 
 <hr>
 
-<form #courseForm="ngForm">
+<form #courseForm="ngForm" *ngIf="course">
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Name:</label>
         <div class="col-sm-10">
@@ -39,7 +39,6 @@
                     <div class="invalid-feedback">
                         <span>Course Rating is required</span>
                     </div>
-
                 </div>
             </div>
 
@@ -54,7 +53,6 @@
                         <div class="invalid-feedback">
                             <span>Course description is required</span>
                         </div>
-
                     </div>
                 </div>
                 <button [disabled]="courseForm.invalid" (click)="save()" class="btn btn-primary mr-2">Save</button>
