--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #7c095f">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #3f033a">
     <a [routerLink]="['/courses']" class="navbar-brand">Course Manager</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a [routerLink]="['/courses']"  routerLinkActive="active" class="nav-link">Courses</a>
+                <a [routerLink]="['/courses']"  routerLinkActive="active" class="nav-link"><span class="fa fa-home"></span></a>
             </li>
         </ul>
     </div>
